# PspNet-Caffe

./: README.md  README.md~
Pre_trained_model/: README.md~
caffe-pspnet/: CMakeLists.txt
caffe-pspnet/include/caffe/: data_transformer.hpp
caffe-pspnet/include/caffe/layers/: annotated_data_layer.hpp  base_data_layer.hpp  image_seg_online_data_layer.hpp  image_seg_online_offline_data_layer.hpp  interp_layer.hpp
caffe-pspnet/src/caffe/: data_transformer.cpp
caffe-pspnet/src/caffe/layers/: annotated_data_layer.cpp  base_data_layer.cpp  base_data_layer.cu  image_seg_online_data_layer.cpp  image_seg_online_offline_data_layer.cpp  multibox_loss_layer.cpp
caffe-pspnet/src/caffe/proto/: caffe.proto
caffe_pspnet/include/caffe/layers/: detection_output_layer.hpp
caffe_pspnet/include/caffe/util/: io.hpp
caffe_pspnet/src/caffe/layers/: detection_output_layer.cpp  detection_output_layer.cu  image_seg_data_layer.cpp  interp_layer.cpp  permute_layer.cu
caffe_pspnet/src/caffe/util/: io.cpp
pspnet_test/: CMakeLists.txt  CMakeLists.txt~
pspnet_test/includes/: vision.h
pspnet_test/sources/: test.cpp  test_crf.cpp
utils/prototxt_testing/: 17_object.prototxt~  17_object_modified .prototxt~  2_object.prototxt~  2_object_modified.prototxt~  faddu_test_crf.prototxt~  modified_pspnet_test.prototxt  pspnet50_ADE20K_473.prototxt  pspnet50_ADE20K_473_crf.prototxt
utils/prototxt_training/: 17_object.prototxt~  2_object.prototxt~  modified_pspnet.prototxt  original_pspnet.prototxt  solver_PSP.prototxt  solver_PSP.prototxt~
